# voice_assistant_bk

./: .dockerignore  .env.docker  .env.example  .gitignore  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  COMPLETE_PIPELINE_GUIDE.md  Dockerfile  Voice_Assistant_API.postman_collection.json  WAKE_WORD_TESTING_GUIDE.md  WAKE_WORD_USAGE.md  docker-compose.yml  docker-deploy.md  manage.py  openapi.yaml  pdf_to_vectordb.py  pyproject.toml  requirements.txt  streamlit_app.py  temp  test_conversation_memory.py  test_wake_word.py  voice_assistant_requirements.md  wake_word_detection.py  wake_word_example.py
my_vector_db/befa9c81-d155-47fe-a127-3a9b08e2ba6f/: index_metadata.pickle
semantic_search/: apps.py  models.py  urls.py  views.py
speech_recognition/: apps.py  models.py  urls.py  views.py
tesla_db/: chroma.sqlite3
text_to_speech/: apps.py  models.py  urls.py  views.py
voice_assistant_project/: asgi.py  settings.py  urls.py  wsgi.py
wake_word/: __init__.py  apps.py  urls.py  views.py
